tests/fail/BinRShift.java
package fail;

import java.lang.System;

public class BinRShift {
	public static void main(String[] args) {
		System.out.println('a' >> 2);
	}
}